name:              bitidx
version:           0.0.0.0
license:           BSD3
license-file:      LICENSE
author:            Sam Truzjan
maintainer:        Sam Truzjan <pxqr.sta@gmail.com>
copyright:         (c) 2013, Sam Truzjan
category:          Web
build-type:        Simple
cabal-version:     >= 1.10
tested-with:       GHC == 7.6.3
homepage:          https://github.com/cobit/bitidx
bug-reports:       https://github.com/cobit/bitidx/issues
synopsis:          Torrent indexer
description:       Torrent indexer

source-repository head
  type:                git
  location:            git://github.com/cobit/bitidx.git

source-repository this
  type:                git
  location:            git://github.com/cobit/bitidx.git
  branch:              master
  tag:                 v0.0.0.0

flag dev
  description:         Turn on development settings, like auto-reload templates.
  default:             False

flag library-only
  description:         Build for use with "yesod devel"
  default:             False

library
  default-language:    Haskell2010
  default-extensions:  TemplateHaskell
                       QuasiQuotes
                       OverloadedStrings
                       NoImplicitPrelude
                       CPP
                       MultiParamTypeClasses
                       TypeFamilies
                       GADTs
                       GeneralizedNewtypeDeriving
                       FlexibleContexts
                       EmptyDataDecls
                       NoMonomorphismRestriction
                       DeriveDataTypeable
                       TypeSynonymInstances
                       FlexibleInstances
                       RecordWildCards

  exposed-modules:     Application
                       Foundation
                       Import
                       Widget
                       Model
                       Model.Internal
                       Model.Entities
                       Settings
                       Settings.StaticFiles
                       Settings.Development
                       Handler.Release
                       Handler.Release.Recent
                       Handler.Search
                       Handler.Static
                       Handler.Tracker
                       Handler.User
                       Handler.User.Permissions
                       Paths_bitidx

  if flag(dev) || flag(library-only)
    cpp-options: -DDEVELOPMENT
    ghc-options: -Wall -O0
  else
    ghc-options: -Wall -O2

  build-depends:       base                          >= 4          && < 5
                 -- , yesod-platform                >= 1.1        && < 1.2
                     , yesod                         >= 1.2        && < 1.3
                     , yesod-core                    >= 1.2        && < 1.3
                     , yesod-auth                    >= 1.2        && < 1.3
                     , yesod-static                  >= 1.2        && < 1.3
                     , yesod-form                    >= 1.3        && < 1.4
                     , bytestring                    >= 0.9        && < 0.11
                     , text                          >= 0.11       && < 0.12
                     , persistent                    >= 1.2        && < 1.3
                     , persistent-sqlite             >= 1.2        && < 1.3
                     , persistent-template           >= 1.2        && < 1.3
                     , template-haskell
                     , hamlet                        >= 1.1        && < 1.2
                     , shakespeare-css               >= 1.0        && < 1.1
                     , shakespeare-js                >= 1.0.2      && < 1.2
                     , shakespeare-text              >= 1.0        && < 1.1
                     , hjsmin                        >= 0.1        && < 0.2
                     , monad-control                 >= 0.3        && < 0.4
                     , wai-extra                     >= 1.3        && < 1.4
                     , yaml                          >= 0.8        && < 0.9
                     , http-conduit                  >= 1.9        && < 1.10
                     , directory                     >= 1.1        && < 1.3
                     , warp                          >= 1.3        && < 1.4
                     , data-default
                     , aeson
                     , conduit                       >= 1.0
                     , monad-logger                  >= 0.3
                     , fast-logger                   >= 0.3

 -- TODO remove network dependency
                     , yesod-newsfeed
                     , base16-bytestring
                     , blaze-builder
                     , esqueleto
                     , cereal
                     , markdown
                     , gravatar
                     , time == 1.*
                     , old-locale
                     , bencoding
                     , bittorrent
                     , network

executable bitidx
  default-language:   Haskell2010
  hs-source-dirs:     app
  main-is:            main.hs
  build-depends:      base
                    , bitidx
                    , yesod
  ghc-options:  -threaded -O2
  if flag(library-only)
    buildable: False

test-suite test
  type:              exitcode-stdio-1.0
  hs-source-dirs:    tests
  main-is:           main.hs
  ghc-options:       -Wall
  build-depends:     base
                   , bitidx
                   , yesod-test >= 1.2 && < 1.3
                   , yesod-core
                   , yesod
                   , persistent
                   , persistent-sqlite
                   , resourcet
                   , monad-logger
                   , transformers
                   , hspec
